--- a/task/MainWindow.xaml
+++ b/task/MainWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:task"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        mc:Ignorable="d" FontSize="20"
+        Title="MainWindow" Height="600" Width="450" KeyUp="Window_KeyUp">
     <Grid>
 
     </Grid>
