--- a/task/MainWindow.xaml
+++ b/task/MainWindow.xaml
@@ -3,43 +3,43 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:task"
         xmlns:game2048="clr-namespace:Game2048"
         mc:Ignorable="d" FontSize="20"
         Title="MainWindow" Height="600" Width="450" KeyUp="Window_KeyUp">
     <Window.DataContext>
-        <game2048:ViewModel2048/>
+        <game2048:ViewModel2048 />
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <StackPanel>
-            <TextBlock Text="2 0 4 8" FontSize="30" TextAlignment="Center"/>
+            <TextBlock Text="2 0 4 8" FontSize="30" TextAlignment="Center" />
             <TextBlock>
-                <Run Text="Максимальное значение:"/>
-                <Run Text="{Binding MaxValue, Mode=OneWay}"/>
+                <Run Text="Максимальное значение:" />
+                <Run Text="{Binding MaxValue, Mode=OneWay}" />
             </TextBlock>
             <TextBlock>
-                <Run Text="Сумма всех значений:"/>
-                <Run Text="{Binding SumValue, Mode=OneWay}"/>
+                <Run Text="Сумма всех значений:" />
+                <Run Text="{Binding SumValue, Mode=OneWay}" />
             </TextBlock>
             <TextBlock>
-                <Run Text="Осталось пустых клеток:"/>
-                <Run Text="{Binding CountEmptyCell, Mode=OneWay}"/>
+                <Run Text="Осталось пустых клеток:" />
+                <Run Text="{Binding CountEmptyCell, Mode=OneWay}" />
             </TextBlock>
-            <Button Content="Restart" Command="{Binding RestartCommand}"/>
+            <Button Content="Restart" Command="{Binding RestartCommand}" />
         </StackPanel>
         <Viewbox Grid.Row="1" Panel.ZIndex="10">
-            <TextBlock TextAlignment="Center" FontFamily="Gill Sans MT Ext Condensed Bold" FontWeight="Bold" Margin="10" Foreground="Red" Opacity="0.50" >
+            <TextBlock TextAlignment="Center" FontFamily="Gill Sans MT Ext Condensed Bold" FontWeight="Bold"
+                       Margin="10" Foreground="Red" Opacity="0.50">
                 <TextBlock.Style>
                     <Style TargetType="TextBlock">
                         <Setter Property="Text" Value="ИГРА 
- закончена!"/>
+ закончена!" />
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsGameOver}" Value="false">
-                                <Setter Property="Text" Value="{x:Null}"/>
+                                <Setter Property="Text" Value="{x:Null}" />
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
@@ -48,40 +48,41 @@
         </Viewbox>
         <ItemsControl Grid.Row="1" ItemsSource="{Binding Cells}">
             <ItemsControl.Resources>
-                <game2048:IntConverter x:Key="IntConverter"/>
+                <game2048:IntConverter x:Key="IntConverter" />
             </ItemsControl.Resources>
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <UniformGrid Rows="4" Columns="4"/>
+                    <UniformGrid Rows="4" Columns="4" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate DataType="{x:Type game2048:Cell}">
                     <Border BorderBrush="Green"
-                           BorderThickness="5"
-                           Background="LightGreen">
+                            BorderThickness="5"
+                            Background="LightGreen">
                         <Viewbox>
                             <Label HorizontalContentAlignment="Center"
-                               VerticalContentAlignment="Center"
-                               FontSize="20"
-                               FontWeight="Bold"
-                               Margin="5"
-                               BorderThickness="5"
-                           >
+                                   VerticalContentAlignment="Center"
+                                   FontSize="20"
+                                   FontWeight="Bold"
+                                   Margin="5"
+                                   BorderThickness="5">
                                 <Label.Style>
                                     <Style TargetType="Label">
-                                        <Setter Property="Content" Value="{Binding Value, Converter={StaticResource IntConverter}}"/>
-                                        <Setter Property="Foreground" Value="Blue"/>
-                                        <Setter Property="BorderBrush" Value="Transparent"/>
+                                        <Setter Property="Content"
+                                                Value="{Binding Value, Converter={StaticResource IntConverter}}" />
+                                        <Setter Property="Foreground" Value="Blue" />
+                                        <Setter Property="BorderBrush" Value="Transparent" />
                                         <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Value}" Value="{x:Static game2048:CellValueEnum.None}">
-                                                <Setter Property="Content" Value="{x:Null}"/>
+                                            <DataTrigger Binding="{Binding Value}"
+                                                         Value="{x:Static game2048:CellValueEnum.None}">
+                                                <Setter Property="Content" Value="{x:Null}" />
                                             </DataTrigger>
                                             <DataTrigger Binding="{Binding IsNewValue}" Value="true">
-                                                <Setter Property="Foreground" Value="Coral"/>
+                                                <Setter Property="Foreground" Value="Coral" />
                                             </DataTrigger>
                                             <DataTrigger Binding="{Binding IsCalculated}" Value="true">
-                                                <Setter Property="BorderBrush" Value="Azure"/>
+                                                <Setter Property="BorderBrush" Value="Azure" />
                                             </DataTrigger>
                                         </Style.Triggers>
                                     </Style>
@@ -93,8 +94,8 @@
             </ItemsControl.ItemTemplate>
             <ItemsControl.ItemContainerStyle>
                 <Style>
-                    <Setter Property="Control.HorizontalContentAlignment" Value="Stretch"/>
-                    <Setter Property="Control.VerticalContentAlignment" Value="Stretch"/>
+                    <Setter Property="Control.HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="Control.VerticalContentAlignment" Value="Stretch" />
                 </Style>
             </ItemsControl.ItemContainerStyle>
         </ItemsControl>
